# changachanga_dev

./: .gitignore  .prod.docker.env  CONTRIBUTING.md  README.md  aws_deploy_api.sh  deploy_api.sh  docker-compose.yml  package-lock.json  package.json  prod.docker-compose.yml  set-up.sh
.ssh/: pdn-logins5.16.23.6-24.pem
backend/: backend.Dockerfile  worker.Dockerfile
backend/app/: .prod.env  beat-start.sh  open_api.json  prestart.sh  pyproject.toml  worker-start.sh
backend/app/app/: backend_pre_start.py  logging.conf  main.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: accounts.py  channels.py  login.py  payments.py  users.py
backend/app/app/core/: celery_app.py  config.py  security.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/models/: __init__.py  accounts.py  channels.py
backend/app/app/providers/: file_uploders.py  kyc_providers.py  messaging_provider.py  payment_lib.py
backend/app/app/schemas/: __init__.py  activation_status.py  base_schemas.py  channel.py  channel_users.py  kyc_verification.py  login.py  otp.py  payments.py  token.py  user.py
backend/app/app/services/: __init__.py  base.py  channel_management.py  user_management.py
backend/app/app/tasks/: __init__.py  worker.py
backend/app/app/tests/: payment_provider_tests.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 5e7f3ca144c4_.py
webapp/: .env.example  openapi.json  package-lock.json  package.json  remix.config.js  tailwind.config.ts  todo.md  (+1 more)
(+47 files in other folders)
